--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>mpxhf demo</title>
-    <style>
-    	*{
-    		font-size: 10px;
-    	}
-    </style>
+    <title>my-project</title>
   </head>
   <body>
     <div id="app"></div>
